# hs-collection1

./: README.md
dsp/: TestDSP.hs  WAV.hs
hs-dynsite/: Crypto.hs  DynSite.hs  Makefile  Moin.hs  RecompilePage.hs  SHA1.hs  htaccess_rewrite_r  sign.js
hs-finance/: BorsenDkQuotes.hs  Chart.hs  FetchQuotes.hs  Filter.hs  FinanceDatabaseSpec.hs  GtkGladeMainTemplate.hs  MysqlUpdate.hs  OMXNordic.hs  Overview.hs  Price.hs  Quote.hs  TODO  YahooQuotes.hs  hs-finance-graph-gui.glade  hs-finance-overview-gui.glade
hs-framework/: hs-framework.cabal
hs-http/: hs-http.cabal
hs-mail/: hs-mail.cabal
hs-milter/: TestSendMail.hs  hs-milter.cabal  milterwrap.c
hs-milter/Net/: Milter.hs  MilterChannel.hs  MilterLib.hs  MilterProtocol.lhs  MilterProtocolIO.hs  MilterTalk.hs  MilterTest.hs
hs-mini-httpd/: Moin.hs  httpd.hs  run.sh
hs-misc/: ByteOrder.hs  DeepSeq.lhs  FixedPoint.hs  Logger.hs  Misc.hs  Parse.hs  hs-misc.cabal
hs-net/: hs-net.cabal
hs-photo/: Photo.hs  PhotoSieve.hs  hs-photo.cabal
hs-printf/: Printf.hs
hs-profile/: Profile.hs  hs-profile.cabal
hs-ssl/: hs-ssl.cabal
hs-system/: hs-system.cabal
hs-web/: hs-web.cabal
plant/: ApproxTree.hs  ArrayLib.hs  BArrAtoms.hs  Basic.hs  DeepSeq.hs  Draw.hs  Draw2.hs  DynLoad.hs  EngineInst1.hs  EngineInst2.hs  GL.hs  GLHelper.hs  GLMisc.hs  GLU.hs  GLUTMain.hs  GLView.hs  GTKMain.hs  GTKMain1.hs  GUIHelp.hs  GeomRep.hs  Helpers.hs  IdentMonad.hs  Inter.hs  LSystem.hs  LinAlg.hs  LoadModule.hs  Macro.hs  Main.hs  Meta.hs  MetaLibHigh.hs  MetaLibLow.hs  MetaPlants.hs  Misc.hs  MonInter.hs  MonadLib.hs  (+27 more)
(+101 files in other folders)
